--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,8 @@ h1 {
 #game {
     background-color: lightcyan;
     border-radius: 30px;
+    border-color: black;
+    border-width: medium;
     padding: 10px 80px 20px 80px;
 }
 
@@ -71,19 +73,6 @@ h1 {
     flex-direction: row;    
 }
 
-
-#t:disabled{
-    opacity: 0.5;
-}
-#r:disabled{
-    opacity: 0.5;
-}
-#d:disabled{
-    opacity: 0.5;
-}
-
-
-
 #t:hover{
     transform: scale(1.1);
 }
@@ -96,5 +85,57 @@ h1 {
     transform: scale(1.1);
 }
 
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    border-radius: 20px;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  #did {
+    color: #aaa;
+    float: left;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 20px;
+  }
 
-/* disable to did it button, did it button to undo disable */
+  #nope {
+      color: #aaa;
+      float: right;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 20px;
+  }
+  
+  #did:hover,
+  #did:focus {
+    color: lightcoral;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  #nope:hover,
+  #nope:focus {
+    color: lightcoral;
+    text-decoration: none;
+    cursor: pointer;
+  }
