--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ h1 {
 
   #nope {
       color: #aaa;
-      float: right;
+      float: inline-end;
       font-size: 20px;
       font-weight: bold;
       border-radius: 20px;
