--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column ;
-    background-color: lightcoral;
+    background-color: #FE3C72;;
 }
 
 h1 {
@@ -25,7 +25,6 @@ h1 {
     background-color: lightcyan;
     border-radius: 30px;
     padding: 10px 20px 20px 40px;
-
 }
 
 #start {
@@ -51,6 +50,9 @@ h1 {
     border-width: medium;
     padding: 10px 20px 20px 20px;
     width: 350px;
+    box-shadow:  25px 25px 50px #66182e, 
+    -25px -25px 50px #ff60b6;
+  
 }
 
 .score-board {
@@ -58,15 +60,24 @@ h1 {
     justify-content: space-between;
 }
 
+#head {
+    text-align: center;
+    font-size: 30px;
+}
+
 #player1 {
-    padding-bottom: 10px;
+    padding: 5px 20px 5px 10px;
     font-size: 20px;
+    border-radius: 10px;
 }
 
 #player2 {
-    padding-bottom: 10px;
+    padding: 5px 20px 5px 10px;
     font-size: 20px;
+    border-radius: 10px;
+
 }
+
 .choices {
     text-align: center;
     display: flex;
@@ -127,10 +138,9 @@ h1 {
 /* The Close Button */
 #did {
     color: black;
-    float: left;
     font-size: 20px;
     font-weight: thin;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: lightgreen;
     border-width: medium;
     display: inline-block;
@@ -138,10 +148,9 @@ h1 {
 
 #nope {
     color: black;
-    float: inline-start;
     font-size: 20px;
     font-weight: thin;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: lightpink;
     border-width: medium;
     display: inline-block;
